--- a/.github/workflows/from-a.yml
+++ b/.github/workflows/from-a.yml
@@ -36,4 +36,4 @@ jobs:
         # You can now use the JAR files in the 'jar-artifacts/' directory
         # for your Maven build or any other necessary tasks.
         # mvn clean install
-        mvn clean install -e -X
+        mvn clean install
