--- a/.github/workflows/from-a.yml
+++ b/.github/workflows/from-a.yml
@@ -24,6 +24,10 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         run-id: 7621124781
 
+    - name: Unzip Artifacts
+      run: |
+          unzip -o ${{ github.workspace }}/all-jar-artifacts.zip -d ${{ github.workspace }}
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
