--- a/.github/workflows/from-a.yml
+++ b/.github/workflows/from-a.yml
@@ -24,9 +24,14 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         run-id: 7708322012
 
-    - name: Unzip Artifacts
+    - name: List Extracted Files
       run: |
-          unzip -o ${{ github.workspace }}/all-jar-artifacts.zip -d ${{ github.workspace }}
+          ls -la ${{ github.workspace }}
+  
+
+    # - name: Unzip Artifacts
+    #   run: |
+    #       unzip -o ${{ github.workspace }}/all-jar-artifacts.zip -d ${{ github.workspace }}
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
