--- a/.github/workflows/from-a.yml
+++ b/.github/workflows/from-a.yml
@@ -22,10 +22,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Download Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: all-jar-artifacts
+      # - name: Download Artifacts
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: all-jar-artifacts
           # ... (rest of your download configuration)
 
       - name: List Extracted Files
