--- a/.github/workflows/from-a.yml
+++ b/.github/workflows/from-a.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Download .m2 cache from first repository
+        uses: actions/download-artifact@v2
+        with:
+          name: m2-cache
+          path: ~/.m2/repository
+
       - name: Cache Maven dependencies
         uses: actions/cache@v3
         with:
