--- a/.github/workflows/from-a.yml
+++ b/.github/workflows/from-a.yml
@@ -15,10 +15,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download .m2 cache from first repository
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: m2-cache
-          path: ~/.m2/repository/.cache
+          # path: ~/.m2/repository/.cache
+          repository: bankolejohn/uddl-1a
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          run-id: 7827114551
+          
 
       - name: Cache Maven dependencies
         uses: actions/cache@v3
@@ -56,7 +60,7 @@ jobs:
         # path: jar-artifacts/
          repository: bankolejohn/uddl-1a
          github-token: ${{ secrets.GITHUB_TOKEN }}
-         run-id: 7810216591
+         run-id: 7827114551
     
       - name: Build with Downloaded Artifacts
         run: |
