--- a/.github/workflows/from-a.yml
+++ b/.github/workflows/from-a.yml
@@ -62,7 +62,7 @@ jobs:
          github-token: ${{ secrets.GITHUB_TOKEN }}
          run-id: 7827114551
       - name: Download com.epistimis.uddl.query
-        uses: maven/maven-action@v3
+        uses: s4u/setup-maven-action@v1.12.0
         with:
          goals: dependency:get -DgroupId=com.epistimis.uddl -DartifactId=uddl.query -Dversion=1.0.0
 
