--- a/.github/workflows/cached-workflow.yml
+++ b/.github/workflows/cached-workflow.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/cache@v2
       with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('./shared.txt') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('shared.txt') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
