--- a/.github/workflows/from-a.yml
+++ b/.github/workflows/from-a.yml
@@ -61,10 +61,15 @@ jobs:
          repository: bankolejohn/uddl-1a
          github-token: ${{ secrets.GITHUB_TOKEN }}
          run-id: 7827114551
-      - name: Download com.epistimis.uddl.query
-        uses: s4u/setup-maven-action@v1.12.0
-        with:
-         goals: dependency:get -DgroupId=com.epistimis.uddl -DartifactId=uddl.query -Dversion=1.0.0
+      # - name: Download com.epistimis.uddl.query
+      #   uses: s4u/setup-maven-action@v1.12.0
+      #   with:
+      #    goals: dependency:get -DgroupId=com.epistimis.uddl -DartifactId=uddl.query -Dversion=1.0.0
+
+      - name: Unzip artifacts
+        run: |
+          unzip -o ${{ github.workspace }}/all-jar-artifacts -d ${{ github.workspace }}
+          ls -R 
 
       - name: Build with Downloaded Artifacts
         run: |
