--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,23 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+            <dependency>
+        <groupId>com.epistimis</groupId>
+        <artifactId>uddl.query.feature</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+        <groupId>com.episitimis</groupId>
+        <artifactId>uddl.query.feature</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <classifier>sources-feature</classifier>
+    </dependency>
+    <!-- Add more dependency entries for the remaining artifacts -->
+    <dependency>
+        <groupId>group13</groupId>
+        <artifactId>artifact13</artifactId>
+        <version>1.0.0</version>
+    </dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
