--- a/.github/workflows/new-from.yml
+++ b/.github/workflows/new-from.yml
@@ -12,10 +12,10 @@ jobs:
               uses: actions/checkout@v3
 
             - name: download artifact
-              uses: actions/download-artifact@v3
+              uses: actions/download-artifact@v4
               with:
                 name: all-jar-artifacts
-                repository: bankolejohn/uddl-la
+                repository: bankolejohn/uddl-1a
                 github-token: ${{secrets.GITHUB_TOKEN}}
                 run-id: 8414074686
 
