--- a/.github/workflows/new-from.yml
+++ b/.github/workflows/new-from.yml
@@ -19,10 +19,10 @@ jobs:
                 github-token: ${{secrets.GITHUB_TOKEN}}
                 run-id: 8414074686
 
-            - name: unzip artifacts
-              run: |
-               unzip -o ${{ github.workspace }}/all-jar-artifacts -d ${{ github.workspace }}
-               ls -R
+            # - name: unzip artifacts
+            #   run: |
+            #    unzip -o ${{ github.workspace }}/all-jar-artifacts -d ${{ github.workspace }}
+            #    ls -R
 
             - name: Set up JDK 17
               uses: actions/setup-java@v3
