--- a/com.epistimis.uddl.ide/pom.xml
+++ b/com.epistimis.uddl.ide/pom.xml
@@ -1,180 +1,423 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.epistimis.uddl</groupId>
-		<artifactId>com.epistimis.uddl.parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
-	<artifactId>com.epistimis.uddl.ide</artifactId>
-	<packaging>eclipse-plugin</packaging>
+	<groupId>com.epistimis.uddl</groupId>
+	<version>1.0.0-SNAPSHOT</version>
+	<artifactId>com.epistimis.uddl.parent</artifactId>
+	<packaging>pom</packaging>
 
-	<dependencies>
-		<dependency>
-			<groupId>ch.qos.reload4j</groupId>
-			<artifactId>reload4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.lsp4j</groupId>
-			<artifactId>org.eclipse.lsp4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.asm</groupId>
-			<artifactId>asm</artifactId>
-		</dependency>
-	</dependencies>
+	<properties>
+		<xtextVersion>2.33.0</xtextVersion>
+		<mwe2Version>2.16.0</mwe2Version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<!-- Tycho settings -->
+		<tycho-version>3.0.5</tycho-version>
+		<!-- Define overridable properties for tycho-surefire-plugin -->
+		<platformSystemProperties></platformSystemProperties>
+		<moduleProperties></moduleProperties>
+		<systemProperties></systemProperties>
+		<additionalTestArguments></additionalTestArguments>
+	</properties>
+	<modules>
+		<module>com.epistimis.uddl</module>
+		<module>com.epistimis.uddl.ide</module>
+		<module>com.epistimis.uddl.ui</module>
+		<module>com.epistimis.uddl.web</module>
+		<module>com.epistimis.uddl.target</module>
+		<module>com.epistimis.uddl.feature</module>
+		<module>com.epistimis.uddl.repository</module>
+		<module>com.epistimis.uddl.tests</module>
+<!--  There is some problem with the ui.tests module. It compiles but it causes the test harness to fail.
+		Commented out for now. 		
+		<module>com.epistimis.uddl.ui.tests</module>
+		<module>com.epistimis.uddl.product</module>
+-->
+
+	</modules>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.eclipse.xtext</groupId>
+				<artifactId>xtext-dev-bom</artifactId>
+				<version>${xtextVersion}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+            <dependency>
+        <groupId>com.epistimis</groupId>
+        <artifactId>uddl.query.feature</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+        <groupId>com.episitimis</groupId>
+        <artifactId>uddl.query.feature</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <classifier>sources-feature</classifier>
+    </dependency>
+	<dependency>
+    <groupId>com.epistimis.uddl.query</groupId>
+    <artifactId>query-1.0.0-SNAPSHOT</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.feature</groupId>
+    <artifactId>feature-1.0.0-SNAPSHOT-sources-feature</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.feature</groupId>
+    <artifactId>feature-1.0.0-SNAPSHOT</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.ide</groupId>
+    <artifactId>ide-1.0.0-SNAPSHOT-ls</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.ide</groupId>
+    <artifactId>ide-1.0.0-SNAPSHOT-sources</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.ide</groupId>
+    <artifactId>ide-1.0.0-SNAPSHOT</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.tests</groupId>
+    <artifactId>tests-1.0.0-SNAPSHOT-sources</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.tests</groupId>
+    <artifactId>tests-1.0.0-SNAPSHOT</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.ui</groupId>
+    <artifactId>ui-1.0.0-SNAPSHOT-sources</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>com.epistimis.uddl.query.ui</groupId>
+    <artifactId>ui-1.0.0-SNAPSHOT</artifactId>
+    <version>SNAPSHOT</version>
+  </dependency>
+
+    <!-- Add more dependency entries for the remaining artifacts -->
+    <dependency>
+        <groupId>group13</groupId>
+        <artifactId>artifact13</artifactId>
+        <version>1.0.0</version>
+    </dependency>
+		</dependencies>
+	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.eclipse.xtend</groupId>
-				<artifactId>xtend-maven-plugin</artifactId>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-source-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>plugin-source</id>
+						<goals>
+							<goal>plugin-source</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>feature-source</id>
+						<goals>
+							<goal>feature-source</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>attach-p2-metadata</id>
+						<phase>package</phase>
+						<goals>
+							<goal>p2-metadata</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho-version}</version>
 				<configuration>
-					<pomDependencies>consider</pomDependencies>
+					<target>
+						<artifact>
+							<groupId>com.epistimis.uddl</groupId>
+							<artifactId>com.epistimis.uddl.target</artifactId>
+							<version>${project.version}</version>
+						</artifact>
+					</target>
+   					<executionEnvironment>JavaSE-17</executionEnvironment>
+					<environments>
+						<environment>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>aarch64</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86_64</arch>
+						</environment>
+					</environments>
+					<dependency-resolution>
+						<extraRequirements>
+							<requirement>
+								<type>eclipse-plugin</type>
+								<id>org.eclipse.xtext.logging</id>
+								<versionRange>1.2.24</versionRange>
+							</requirement>
+							<!-- to get the org.eclipse.osgi.compatibility.state plugin if the target
+								platform is Luna or later. (backward compatible with kepler and previous
+								versions) see https://bugs.eclipse.org/bugs/show_bug.cgi?id=492149 -->
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.eclipse.rcp</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+						</extraRequirements>
+					</dependency-resolution>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.5.0</version>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<excludeGroupIds>p2.eclipse-feature</excludeGroupIds>
-							<outputDirectory>${project.build.directory}/libs</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>false</overWriteSnapshots>
-							<overWriteIfNewer>true</overWriteIfNewer>
-							<excludeTransitive>true</excludeTransitive>
-							<excludeArtifactIds>
-								com.ibm.icu,
-								org.apache.ant,
-								org.apache.commons.lang,
-								org.apache.commons.logging,
-								org.eclipse.core.commands,
-								org.eclipse.core.contenttype,
-								org.eclipse.core.expressions,
-								org.eclipse.core.filesystem,
-								org.eclipse.core.jobs,
-								org.eclipse.core.resources,
-								org.eclipse.core.runtime,
-								org.eclipse.core.variables,
-								org.eclipse.debug.core,
-								org.eclipse.emf.codegen.ecore,
-								org.eclipse.emf.codegen,
-								org.eclipse.emf.mwe.core,
-								org.eclipse.emf.mwe.utils,
-								org.eclipse.emf.mwe2.lib,
-								org.eclipse.emf.mwe2.runtime,
-								org.eclipse.equinox.app,
-								org.eclipse.equinox.preferences,
-								org.eclipse.equinox.registry,
-								org.eclipse.jdt.core,
-								org.eclipse.jdt.debug,
-								org.eclipse.jdt.launching,
-								org.eclipse.text,
-							</excludeArtifactIds>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.googlecode.addjars-maven-plugin</groupId>
-				<artifactId>addjars-maven-plugin</artifactId>
-				<version>1.0.5</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>add-jars</goal>
-						</goals>
-						<configuration>
-							<resources>
-								<resource>
-									<directory>${project.build.directory}/libs</directory>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.4.1</version>
-				<configuration>
-					<transformers>
-						<transformer
-							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>org.eclipse.xtext.ide.server.ServerLauncher</mainClass>
-						</transformer>
-						<transformer
-							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-							<resource>plugin.properties</resource>
-						</transformer>
-						<transformer 
-							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer">
-						</transformer>
-					</transformers>
-					<artifactSet>
-						<excludes><!-- avoid duplicate inclusion due to addjars plugin -->
-							<exclude>*:com.epistimis.uddl.ide-org.eclipse.lsp4j*</exclude>
-							<exclude>*:com.epistimis.uddl.ide-org.eclipse.xtext.xbase.lib*</exclude>
-							<exclude>*:com.epistimis.uddl.ide-org.eclipse.xtend.lib*</exclude>
-							<exclude>*:com.epistimis.uddl.ide-com.google.guava*</exclude>
-							<exclude>*:com.epistimis.uddl.ide-asm*</exclude>
-							<exclude>*:com.epistimis.uddl.ide-log4j*</exclude>
-							<exclude>*:com.epistimis.uddl.ide-reload4j*</exclude>
-							<exclude>*:com.epistimis.uddl.ide-org.objectweb.asm*</exclude>
-							<exclude>*:com.epistimis.uddl.ide-org.apache.log4j*</exclude>
-						</excludes>
-					</artifactSet>
-					<filters>
-						<filter>
-							<artifact>*:*</artifact>
-							<excludes>
-								<exclude>META-INF/INDEX.LIST</exclude>
-								<exclude>META-INF/*.SF</exclude>
-								<exclude>META-INF/*.DSA</exclude>
-								<exclude>META-INF/*.RSA</exclude>
-								<exclude>.options</exclude>
-								<exclude>.api_description</exclude>
-								<exclude>*.profile</exclude>
-								<exclude>*.html</exclude>
-								<exclude>about.*</exclude>
-								<exclude>about_files/*</exclude>
-								<exclude>plugin.xml</exclude>
-								<exclude>systembundle.properties</exclude>
-								<exclude>profile.list</exclude>
-								<exclude>**/*._trace</exclude>
-								<exclude>**/*.g</exclude>
-								<exclude>**/*.mwe2</exclude>
-								<exclude>**/*.xtext</exclude>
-							</excludes>
-						</filter>
-					</filters>
-					<shadedArtifactAttached>true</shadedArtifactAttached>
-					<shadedClassifierName>ls</shadedClassifierName>
-					<minimizeJar>false</minimizeJar>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.xtend</groupId>
+					<artifactId>xtend-maven-plugin</artifactId>
+					<version>${xtextVersion}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+								<goal>xtend-install-debug-info</goal>
+								<goal>testCompile</goal>
+								<goal>xtend-test-install-debug-info</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
+						<testOutputDirectory>${basedir}/xtend-gen</testOutputDirectory>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.2.0</version>
+					<configuration>
+						<filesets>
+							<fileset>
+								<directory>${basedir}/xtend-gen</directory>
+								<includes>
+									<include>**/*</include>
+								</includes>
+							</fileset>
+						</filesets>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											build-helper-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.9.1,)
+										</versionRange>
+										<goals>
+											<goal>add-resource</goal>
+											<goal>add-source</goal>
+											<goal>add-test-resource</goal>
+											<goal>add-test-source</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+				<plugin>
+					<!--
+						Can be removed after first generator execution
+						https://bugs.eclipse.org/bugs/show_bug.cgi?id=480097
+					-->
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<compilerArgument>-err:-forbidden</compilerArgument>
+						<useProjectSettings>false</useProjectSettings>
+					</configuration>
+				</plugin>
+				<!-- to skip running (and compiling) tests use commandline flag: -Dmaven.test.skip
+					To skip tests, but still compile them, use: -DskipTests
+					To allow all tests in a pom to pass/fail, use commandline flag: -fae (fail
+					at end) -->
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
+						<argLine>${platformSystemProperties} ${systemProperties} ${moduleProperties} ${additionalTestArguments}</argLine>
+						<failIfNoTests>false</failIfNoTests>
+						<useUIHarness>false</useUIHarness>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
+	<repositories>
+		<repository>
+			<id>codehaus-snapshots</id>
+			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
+			<url>http://nexus.codehaus.org/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<!-- This must be disabled explicitly, otherwise it is enabled by https://github.com/mojohaus/mojo-parent 
+			which is taken from exec-maven-plugin from at least version 1.6.0 -->
+		<repository>
+			<id>ossrh-snapshots</id>
+			<name>ossrh-snapshots</name>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
+		<!-- This is enabled by /org/sonatype/oss/oss-parent/7 used as parent by 
+			org/xtext/antlr-generator/3.2.1 -->
+		<repository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>codehaus-snapshots</id>
+			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
+			<url>http://nexus.codehaus.org/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+		<pluginRepository>
+			<id>ossrh-snapshots</id>
+			<name>ossrh-snapshots</name>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
+	<profiles>
+		<profile>
+			<id>macos</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
+				<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
+			</properties>
+		</profile>
+		<profile>
+			<id>jdk9-or-newer</id>
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<properties>
+				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
+			</properties>
+		</profile>
+	</profiles>
 
+	<dependencies>
+	</dependencies>
 </project>
