--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+        <groupId>com.episitimis</groupId>
+        <artifactId>uddl.query.feature</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <classifier>sources-feature</classifier>
+	<scope>system</scope>
+    <systemPath>${project.basedir}</systemPath>
+  </dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
