--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <version>1.0.0-SNAPSHOT</version>
         <classifier>sources-feature</classifier>
 	<scope>system</scope>
-    <systemPath>/home/runner/work/uddl-1b/uddl-1b</systemPath>
+    <systemPath>${github.workspace}</systemPath>
   </dependency>
 		</dependencies>
 	</dependencyManagement>
