--- a/.github/workflows/new-from.yml
+++ b/.github/workflows/new-from.yml
@@ -19,15 +19,28 @@ jobs:
                 github-token: ${{secrets.GITHUB_TOKEN}}
                 run-id: 8414074686
 
+            - name: JFrog CLI Setup
+              uses: jfrog/setup-jfrog-cli@v3
+              env:
+                 JF_URL: ${{ secrets.ARTIFACTORY_URL }}
+                 JF_ACCESS_TOKEN: ${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}
+            - name: test
+              run: |
+               jf -v
+               jf rt ping
+
             - name: list files
               run: |
                pwd
                ls
-               
-            - name: install jfrog
-              uses: jfrog/setup-jfrog-cli@v4
-            - run: jf --v
-           
+
+            - name: Generate settings.xml for Maven Builds
+              uses: whelk-io/maven-settings-xml-action@v22
+              with:
+                repositories: '[{ "id": "some-repository", "url": "http://some.repository.url" }]'
+                # plugin_repositories: '[{ "id": "some-plugin-repository", "url": "http://some.plugin.repository.url" }]'
+                servers: '[{ "id": "some-server", "username": "some.user", "password": "some.password" }]'
+            
 
             - name: Set up JDK 17
               uses: actions/setup-java@v3
